Use current tab URL

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,5 +10,10 @@
   "browser_action": {
     "default_icon": "logo512.png",
     "default_popup": "popup.html"
-  }
+  },
+  "permissions": [
+    "tabs",
+    "*://developer.mozilla.org/*",
+    "webRequest"
+  ]
 }
